--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,9 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends: 
-    R (>= 2.10)
+    R (>= 2.10),
+    stars,
+    sf,
+    dplyr,
+    raster
 LazyData: true
