fix: check runs now without throwing anything

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,11 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Depends: 
-    R (>= 2.10),
+    R (>= 2.10)
+Imports:
     stars,
     sf,
     dplyr,
-    raster
+    scico,
+    ggplot2
 LazyData: true
