--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,8 @@ Package: layer
 Title: layer tilts your maps and turns them into ggplots
 Version: 0.0.1
 Authors@R: 
-    c(person("Marco", "Sciaini", email = "marco@kaldera.dev", role = c("aut", "cre")), person("Cédric", "Scherer", email = "cedricphilippscherer@gmail.com", role = "cre")
+    c(person("Marco", "Sciaini", email = "marco@kaldera.dev", role = c("aut", "cre")), 
+      person("Cédric", "Scherer", email = "cedricphilippscherer@gmail.com", role = "cre"))
 Description: What the package does (one paragraph).
 License: CC0
 Encoding: UTF-8
