--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: layer tilts your maps and turns them into ggplots
 Version: 0.0.1
 Authors@R: 
     c(person("Marco", "Sciaini", email = "marco@kaldera.dev", role = c("aut", "cre")), 
-      person("Cédric", "Scherer", email = "cedricphilippscherer@gmail.com", role = "cre"))
+      person("Cédric", "Scherer", email = "cedricphilippscherer@gmail.com", role = "aut"))
 Description: What the package does (one paragraph).
 License: CC0
 Encoding: UTF-8
@@ -16,5 +16,6 @@ Imports:
     sf,
     dplyr,
     scico,
-    ggplot2
+    ggplot2,
+    ggnewscale
 LazyData: true
