--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,12 @@
 
 export(plot_tiltedmaps)
 export(tilt_map)
+import(ggnewscale)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,geom_sf)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_color_viridis_c)
+importFrom(ggplot2,scale_fill_viridis_c)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_void)
