--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ importFrom(ggplot2,scale_color_viridis_c)
 importFrom(ggplot2,scale_fill_viridis_c)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_void)
+importFrom(sf,st_geometry_type)
