--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.1
 Authors@R: 
     c(person("Marco", "Sciaini", email = "marco@kaldera.dev", role = c("aut", "cre")), 
       person("Cédric", "Scherer", email = "cedricphilippscherer@gmail.com", role = "aut"))
-Description: What the package does (one paragraph).
+Description: layer is to simplify the whole process of creating stacked tilted maps, that are often used in scientific publications to show different environmental layers for a geographical region. Tilting maps and layering them allows to easily draw visual correlations between these environmental layers.
 License: CC0
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
