added future_map to tilt_map

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,5 +18,9 @@ Imports:
     dplyr,
     scico,
     ggplot2,
-    ggnewscale
+    ggnewscale,
+    magrittr,
+    plyr,
+    tidyr,
+    furrr
 LazyData: true
