--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ importFrom(ggplot2,scale_color_viridis_c)
 importFrom(ggplot2,scale_fill_viridis_c)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_void)
+importFrom(magrittr,"%>%")
 importFrom(sf,st_geometry_type)
