fix: package title as Title Case
This is/was a CRAN requirement at some point

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: layer
-Title: layer tilts your maps and turns them into ggplots
+Title: Layer Tilts Your Maps And Turns Them Into ggplots
 Version: 0.0.1.9000
 Authors@R: 
     c(person("Marco", "Sciaini", email = "marco@kaldera.dev", role = c("aut", "cre")), 
