replace deprecated aes_string with aes and tidyselect with rlang .data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(plot_tiltedmaps)
 export(tilt_map)
 import(raster)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 importFrom(sf,st_geometry_type)
